# online_platform_gadgets

./: pyproject.toml
config/: settings.py  urls.py
main/: admin.py  models.py  serializer.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_agent_duty.py  0003_remove_agent_duty_link_duty.py
users/: models.py  permissions.py  serializer.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
